<resources>
    <string name="app_name">Journal App</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Name </string>
    <string name="nav_header_subtitle">myjournals@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_journals">My Journals</string>
    <string name="add_journal">Add Journal</string>
    <string name="share">Invite others</string>
    <string name="exit">Exit App</string>
    <string name="my_profile">My Profile</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password is empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="password">Password</string>
    <string name="submit_login">Login</string>
    <string name="login_success">Login Successful</string>
    <string name="error_invalid_email_password">Incorrect Email/Password</string>
    <string name="submit_register">Register</string>
    <string name="register_success">User Registered Successfully</string>
    <string name="register_error">Registration not Successful</string>
    <string name="forgot_password">Forgot password? Click here!</string>
    <string name="type_journal">Type your Journal</string>
    <string name="select_date">Select Date</string>
    <string name="done">Done</string>
    <string name="password_recovery">Recover your password</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="forgot_password_msg">Put your registered Email Id to receive password reset instructions.</string>
    <string name="reset_message">We have sent you instructions to reset your password!</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="journal_content_error">Content cannot be empty</string>
    <string name="journal_category_error">Select valid category</string>
    <string name="journal_date_error">Select valid date</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_deep_link">
        com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
    </string>

    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>

    <string name="invitation_title">Send App Invitation</string>
    <string name="invitation_message">Organise your Journals, give it a try</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_cta">Install!</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>

    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>

    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="journal_title">Journal Title</string>
    <string name="journal_title_error">Journal Title cannot be empty</string>

    <string-array name="category">
        <item>Select category</item>
        <item>Family</item>
        <item>Religion</item>
        <item>Work</item>
        <item>Personal</item>
        <item>Education</item>
    </string-array>

</resources>
